src/main/java/com/example/webpos/common/error/GlobalExceptionHandler.java
package com.example.webpos.common.error;

import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class GlobalExceptionHandler {
}
